--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-# Index Page
+<!DOCTYPE html>
+<html>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<head>
+	<title>New World</title>
+</head>
+<body>
+
+Welcome to this new land.
+
+</body>
+</html>
