建了几个页面,写了一篇日记

--- a/index.html
+++ b/index.html
@@ -1,36 +1,38 @@
-<!DOCTYPE html>
-<html>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="stylesheet" type="text/css" href="_CS/editorAreaStyle.css">
-<script src="_JS/jquery.js"></script>
+<meta charset="utf-8" emacsmode="-*- markdown -*-"><link rel="stylesheet" href="latest/website.css?">
 
-<head>
-    <title>New World</title>
-</head>
+                          **CRZ'Blog**
 
-<script type="text/javascript">
-    function changeOutput(){
-		var Text = $('#editorArea').val();
-		$('#outputArea').text(Text);
-	}
-</script>
+CRZ的个人博客
 
-<body>
-    <div class="background">
-        <form class="box">
-<textarea class="textArea" id="editorArea" maxlength="100000" onkeyup="changeOutput()">
-</textarea>
-        </form>
-        <div class="box">
-            <textarea class="textArea" id="outputArea" maxlength="100000" readonly="true">
-    		</textarea>
-        </div>
-    </div>
-	
 
-	<script type="text/javascript">
-		$('outputArea').
-	</script>
-</body>
+关于本人
+==============================================================
 
-</html>
+* 性别男爱好女
+* 中原某大学本科在读
+
+随笔
+==============================================================
+
+* [日记](diary.html)
+* [随笔](essay.html)
+
+博客
+==============================================================
+
+* [MacOS](macOS.html)
+* [Python](python.html)
+* [Lessons](lessons.html)
+* [Markdeep](deep.html)
+
+链接
+==============================================================
+* [CSDN博客](https://blog.csdn.net/qq_40526226)
+* [Gitee](https://gitee.com/chen_run_zhao)
+* [GitHub](https://github.com/RunzhaoChen?tab=repositories)
+* Email:xuan112kong@qq.com
+
+
+
+<style class="fallback">body{visibility:hidden}</style><script>markdeepOptions={tocStyle:'long'};</script>
+<!-- Markdeep: --><script src="latest/markdeep.js?" charset="utf-8"></script>
