--- a/admin/diary.html
+++ b/admin/diary.html
@@ -1,4 +1,4 @@
-<meta charset="utf-8" emacsmode="-*- markdown -*-"> <link rel="stylesheet" href="latest/journal.css?">
+<meta charset="utf-8" emacsmode="-*- markdown -*-"> <link rel="stylesheet" href="../latest/journal.css?">
 
 **日记**
 
@@ -16,4 +16,4 @@ _意识流日记,想到啥写啥_
 
 
 <style class="fallback">body{visibility:hidden}</style><script>markdeepOptions={tocStyle:'long'};</script>
-<script src="latest/markdeep.js?" charset="utf-8"></script>
+<script src="../latest/markdeep.js?" charset="utf-8"></script>
