--- a/index.html
+++ b/index.html
@@ -14,23 +14,24 @@ CRZ的个人博客
 随笔
 ==============================================================
 
-* [日记](diary.html)
-* [随笔](essay.html)
+* [随笔](custom/essay.html)
 
 博客
 ==============================================================
 
-* [MacOS](macOS.html)
-* [Python](python.html)
-* [Lessons](lessons.html)
-* [Markdeep](deep.html)
+* [MacOS](custom/macOS.html)
+* [Python](custom/python.html)
+* [Lessons](custom/lessons.html)
+* [Markdeep](custom/deep.html)
 
 链接
 ==============================================================
+
 * [CSDN博客](https://blog.csdn.net/qq_40526226)
 * [Gitee](https://gitee.com/chen_run_zhao)
 * [GitHub](https://github.com/RunzhaoChen?tab=repositories)
 * Email:xuan112kong@qq.com
+* [Markdeep](https://casual-effects.com/markdeep/)
 
 
 
