--- a/crzadmin.html
+++ b/crzadmin.html
@@ -1,8 +1,8 @@
 <meta charset="utf-8" emacsmode="-*- markdown -*-"><link rel="stylesheet" href="latest/website.css?">
 
-**MyWorld**
+**CR-Z**
 
-满足收藏癖
+用来吃灰的链接🚀
 
 个人链接
 ==============================================================
@@ -20,6 +20,7 @@
 IT网站
 ==============================================================
 * [开源中国](https://www.oschina.net/)
+* [wiki.qt](https://wiki.qt.io/Main)
 
 前端技术网站
 ==============================================================
