--- a/index.html
+++ b/index.html
@@ -1,39 +1,38 @@
 <meta charset="utf-8" emacsmode="-*- markdown -*-"><link rel="stylesheet" href="latest/website.css?">
 
-                          **CRZ'Blog**
+                          **CR-Z**
 
 CRZ的个人博客
 
 
 关于本人
 ==============================================================
-
-* 性别男爱好女
 * 中原某大学本科在读
+* ACM铁牌选手
+
 
 随笔
 ==============================================================
-
 * [随笔](custom/essay.html)
 
-博客
-==============================================================
 
-* [MacOS](custom/macOS.html)
-* [Python](custom/python.html)
+[博客](blog.md.html)
+==============================================================
+* [Markdeep](custom/deep.md.html)
 * [Lessons](custom/lessons.html)
-* [Markdeep](custom/deep.html)
+
 
 链接
 ==============================================================
-
 * [CSDN博客](https://blog.csdn.net/qq_40526226)
 * [Gitee](https://gitee.com/chen_run_zhao)
 * [GitHub](https://github.com/RunzhaoChen?tab=repositories)
-* Email:xuan112kong@qq.com
+*  Email: xuan112kong@qq.com
 * [Markdeep](https://casual-effects.com/markdeep/)
 
-
+收藏
+==============================================================
+* [收藏夹](favorites.html)
 
 <style class="fallback">body{visibility:hidden}</style><script>markdeepOptions={tocStyle:'long'};</script>
 <!-- Markdeep: --><script src="latest/markdeep.js?" charset="utf-8"></script>
