--- a/custom/deep.md.html
+++ b/custom/deep.md.html
@@ -1,7 +1,6 @@
 <meta charset="utf-8" emacsmode="-*- markdown -*-"> <link rel="stylesheet" href="../latest/journal.css?">
 
 **Markdeep使用指南**
-[主页](../index.html)
 
 使用Markdeep的优势:
 1. 直接在html网页中使用, 可以和html标签混合使用
@@ -33,7 +32,7 @@ _以下内容翻译自[MarkdeepDemo](https://casual-effects.com/markdeep/feature
 
 _以下统称Markdeep源文本为:源文本,展现的文本为输出_
 
-您可以添加CSS来更改样式。参考[第七章](deep.html).
+您可以添加CSS来更改样式。参考[第七章](deep.md.html#customformatting).
 也可以在源文本中正常使用HTML的各种标签, 和HTML一样源文本的格式不影响输出.
 
 Markdeep智能地不应用粗体或斜体格式, 比如:x = 3 * y - 2 * z或words_with_internal_下划线.
@@ -1948,7 +1947,8 @@ that appear in the document, you cannot nest a code tag inside of another code t
 likewise for pre tags.  Fortunately, it is pretty hard to imagine a case where you would want
 nested code tags.
 
-
+<br><br>
+[Main page](../index.html)
 
 <style class="fallback"></style><script>markdeepOptions={tocStyle:'long'};</script>
 <script src="../latest/markdeep.js?" charset="utf-8"></script>
