--- a/favorites.html
+++ b/favorites.html
@@ -12,6 +12,7 @@
 
 搜索
 ==============================================================
+* [语法检测](https://www.nounplus.net/grammarcheck/)
 * [StackOverflow](https://stackoverflow.com/)
 * [搜狗微信搜索](https://weixin.sogou.com/)
 * [鸠摩搜书](https://www.jiumodiary.com/)
