--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ CRZ的个人博客
 [博客](blog.md.html)
 ==============================================================
 * [Markdeep](custom/deep.md.html)
+* [MATLAB](custom/matlab.html)
 * [Lessons](custom/lessons.html)
 
 
