--- a/blog.md.html
+++ b/blog.md.html
@@ -7,6 +7,7 @@
 Section 1
 ==============================================================
 
+* [Gradle](custon/JEE/gradle.md.html)
 * [MATLAB](custom/matlab.html)
 * [Lessons](custom/lessons.html)
 
