--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ CRZ的个人博客
 
 [博客](blog.md.html)
 ==============================================================
+* [Gradle](custon/JEE/gradle.md.html)
 * [Markdeep](custom/deep.md.html)
 * [MATLAB](custom/matlab.html)
 * [Lessons](custom/lessons.html)
